--- a/capstone/app/scss/layouts/mainpage.scss
+++ b/capstone/app/scss/layouts/mainpage.scss
@@ -1,6 +1,3 @@
 /**********************
 Base Container
 ***********************/
-div#base-container {
-  height: 100vh;
-}
