--- a/capstone/app/scss/modules/header.scss
+++ b/capstone/app/scss/modules/header.scss
@@ -20,6 +20,6 @@ Header
 }
 
 body {
-  min-height: 2000px;
+  height: auto;
   padding-top: 7em;
 }
